# ultra-turbo-appdata-cleaner

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml
cli/: __init__.py
config/: __init__.py  constants.py  logging_config.py  settings.py
core/: __init__.py  analyzer.py  progress.py  safety.py  scanner.py
gui/: __init__.py
modules/: __init__.py  appdata_cleaner.py  browser_cleaner.py  duplicate_finder.py  log_cleaner.py  temp_cleaner.py
tests/: __init__.py  conftest.py  requirements.txt  test_core.py  test_modules.py  test_web.py
tests/playwright/: test_web_e2e.py
utils/: __init__.py  backup_manager.py  file_operations.py  formatters.py
web/: __init__.py  app.py  config.py  requirements.txt  websocket_handler.py
web/api/: __init__.py  cleaner.py  scanner.py  system.py
web/static/css/: main.css
web/static/js/: cleaner.js  dashboard.js  main.js  websocket.js
web/templates/: base.html  cleaner.html  dashboard.html  logs.html  settings.html
web/utils/: __init__.py  hash_calculator.py  size_calculator.py  validators.py
